# automata

./: LICENSE  automata.cabal
src/Automata/: NFA.hs
src/Automata/Regex/: Compiler.hs  Data.hs  Parser.hs  QQ.hs
tests/Automata/: NFASpec.hs  RegexSpec.hs  Tools.hs
